syntax = "proto3";
package customer;


// The Customer service definition.
service grpcservice {   
  // Get all Customers with filter - A server-to-client streaming RPC.
  rpc GetCustomers(Filter) returns (Customers) {}
  
  // Create a new Customer - A simple RPC 
  rpc CreateCustomer(Customer) returns (Response) {}
}

message Address {
  string street = 1;
  string city = 2;
  string state = 3;
  string zip = 4;
  bool isShippingAddress = 5; 
}

message Customers {
  repeated Customer data = 1;
}

// Request message for creating a new customer
message Customer {
  int32 id = 1;  // Unique ID number for a Customer.
  string name = 2;
  string email = 3;
  string phone = 4;
  repeated Address addresses = 5;
}

message Response {
  int32 id = 1;
  bool success = 2;
}

message Filter {    
  string keyword = 1;
}